Fix for plan header overflow 3

--- a/backend/web/static/retromat.css
+++ b/backend/web/static/retromat.css
@@ -178,8 +178,6 @@
 
     .plan-header .inner {
         display: flex;
-        overflow: hidden;
-
         flex-direction: row; 
         flex-wrap: wrap; 
         align-items: center;
@@ -314,7 +312,6 @@
     }
 
     .plan-header-promo {
-        overflow: hidden;
         flex-shrink: 0;
     }
 
